Create div to seperate intro class from rest of webpage

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,9 @@
-h2.intro {
-  font-weight: bold;
-  font-style: oblique;
-}
-
-p.intro {
+.intro {
   font-family: monospace;
   color: teal;
 }
 
-img.intro {
-  width: 200px;
-  height: 200px;
+img {
+  width: 300px;
+  height: auto;
 }
